--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /*.pot
-    translation: /translations/%language%/%file_name%_(%language%).po
+    translation: /translations/%locale%/%file_name%_(%language%).po
